# tellme

./: .gitignore  README.md  config.yaml  dockerfile  pyproject.toml  requirements.txt  test.py
.devcontainer/: devcontainer.json
.github/workflows/: create_docker_image.yml  dockerfile
tellme/: __init__.py
tellme/00_user_interface/: README.md
tellme/01_get_location/: README.md
tellme/05_create_podcast/: README.md
tellme/AI_Podcast/: create_podcast_audio.py  create_podcast_transcript.py  podcast_setups.py
tellme/AI_Summary/: README.md  summary.py
tellme/A_user_interface/: __init__.py  attraction_map.py  location_to_podcast.py  streamlit_UI.py  user_location.py
tellme/Articles/: README.md  get_wiki_article.py
tellme/Attractions/: get_attractions.py
tellme/B_get_location/: location.py
tellme/C_get_attractions_nearby/: README.md  get_attractions.py
tellme/D_search_article/: README.md  summary.py
tellme/E_summarize_artice/: summarizeGemini.py
tellme/F_create_podcast/: create_podcast.py  create_podcast_audio.py  create_podcast_transcript.py  podcast_setups.py
tellme/Locations/: location.py
tellme/Settings/: AI_settings.py
tellme/User_interface/: attraction_map.py  location_to_podcast.py  streamlit_UI.py  user_location.py
