[tool.poetry]
name = "tellme"
version = "0.1.0"
description = ""
authors = ["Jannik Orzek <jannik.orzek@mailbox.org>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
podcastfy = "^0.4.1"
ffmpeg = "^1.4"
streamlit = "^1.44.1"
aiohttp = "^3.11.16"
geopy = "^2.4.1"
shapely = "^2.1.0"
overpy = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Formatting and code checking with ruff

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = false

[tool.ruff.lint]
extend-select = ["D"]

[tool.ruff.lint.per-file-ignores]
# We don't want to check the test files for documentation
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
