[tool.poetry]
name = "tellme"
version = "0.1.0"
description = ""
authors = ["Jannik Orzek <jannik.orzek@mailbox.org>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = "^1.44.1"
aiohttp = "^3.11.16"
geopy = "^2.4.1"
shapely = "^2.1.0"
overpy = "^0.7"
chatlas = "^0.6.1"
dotenv = "^0.9.9"
wikipedia = "^1.4.0"
google-genai = "^1.10.0"
edge-tts = "^7.0.0"
ffmpeg-python = "^0.2.0"
openai = "^1.75.0"
streamlit-js-eval = "^0.1.7"
streamlit-folium = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Formatting and code checking with ruff

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = false

[tool.ruff.lint]
extend-select = ["D"]

[tool.ruff.lint.per-file-ignores]
# We don't want to check the test files for documentation
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
